--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation project(':library')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.facebook.fresco:fresco:1.13.0'
 }
